<resources>
    <string name="app_name">TicTacToe</string>

    <string name="home_title">Tic Tac Toe</string>
    <string name="play_btn">Play</string>

    <string name="player_setup_title">Enter Your Name</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="submit_btn">Start Game</string>
    <string name="name_hint">Enter Your Name</string>

    <string name="play_again_btn">play Again</string>
    <string name="home_button">Home</string>
</resources>