<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSetupActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/player_setup_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/activity_player_submit_edit_txt_payer_1"
        app:layout_constraintStart_toStartOf="@+id/activity_player_submit_edit_txt_payer_1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textColor="#0000FF"
        app:layout_constraintBottom_toTopOf="@+id/activity_player_submit_edit_txt_payer_2"
        app:layout_constraintStart_toStartOf="@+id/activity_player_submit_edit_txt_payer_2" />

    <EditText
        android:id="@+id/activity_player_submit_edit_txt_payer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/activity_player_submit_edit_txt_payer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_player_submit_edit_txt_payer_1" />

    <Button
        android:id="@+id/activity_player_submit_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="#FF8A65"
        android:onClick="startGameBTN"
        android:text="@string/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_player_submit_edit_txt_payer_2" />
</androidx.constraintlayout.widget.ConstraintLayout>